# teensy4.0_cmake

./: README.md
teensy4_01_led/: CMakeLists.txt
teensy4_01_led/src/: main.c
teensy4_01_led/src/ap/: ap.c
teensy4_01_led/src/bsp/: bsp.c  bsp.h  syscalls.c  sysmem.c
teensy4_01_led/src/bsp/device/xip_boot/: fsl_flexspi_nor_boot.h  fsl_flexspi_nor_config.c
teensy4_01_led/src/hw/: hw.c  hw_def.h
teensy4_01_led/src/hw/driver/: led.c
teensy4_01_led/src/lib/config/: MIMXRT1062xxxxA.mex
teensy4_01_led/src/lib/config/board/: clock_config.c  clock_config.c.bak  dcd.c  dcd.c.bak  peripherals.c  peripherals.c.bak  pin_mux.c  pin_mux.c.bak  pin_mux.h
teensy4_01_led/src/lib/sdk/drivers/: fsl_elcdif.c  fsl_elcdif.h  fsl_flexspi_edma.c  fsl_flexspi_edma.h  fsl_lpi2c_edma.c  fsl_lpi2c_edma.h  fsl_lpspi.c  fsl_lpspi.h  fsl_lpspi_edma.c  fsl_lpspi_edma.h  fsl_lpuart_edma.c  fsl_lpuart_edma.h  fsl_pxp.c  fsl_pxp.h  fsl_qtmr.c  fsl_qtmr.h  fsl_trng.c  fsl_trng.h
teensy4_01_led/tools/: toolchain.cmake
